// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Location Card Default 1`] = `
Array [
  <div
    id="root"
  >
    <article
      className="location-card"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
    >
      <h2
        className="location-card__title"
      >
        Title
      </h2>
      <div
        className="location-card__edit-icon"
      >
        <img
          alt="edit"
          height="16"
          src="Edit.svg"
          width="16"
        />
      </div>
      <div
        className="location-card__content"
      >
        <div>
          Test content
        </div>
      </div>
    </article>
  </div>,
  <div
    id="modal-root"
  />,
]
`;

exports[`Storyshots components/Location Card Location Card With Location Content 1`] = `
Array [
  <div
    id="root"
  >
    <article
      className="location-card"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
    >
      <h2
        className="location-card__title"
      >
        Title
      </h2>
      <div
        className="location-card__edit-icon"
      >
        <img
          alt="edit"
          height="16"
          src="Edit.svg"
          width="16"
        />
      </div>
      <div
        className="location-card__content"
      >
        <ul
          className="location-content__list"
        >
          <li
            className="location-content__list-item"
          >
            <img
              alt="users"
              className="location-content__list-item-image"
              height="14"
              src="Users.svg"
              width="14"
            />
            <p
              className="location-content__list-item-text"
            >
              123
               
              users
            </p>
          </li>
          <li
            className="location-content__list-item"
          >
            <img
              alt="timezone"
              className="location-content__list-item-image"
              height="14"
              src="Timezone.svg"
              width="14"
            />
            <p
              className="location-content__list-item-text"
            >
              10:10 AM GMT+1
               
            </p>
          </li>
          <li
            className="location-content__list-item"
          >
            <img
              alt="views"
              className="location-content__list-item-image"
              height="14"
              src="Views.svg"
              width="14"
            />
            <p
              className="location-content__list-item-text"
            >
              3
               
              views
            </p>
          </li>
        </ul>
      </div>
    </article>
  </div>,
  <div
    id="modal-root"
  />,
]
`;
